--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/mercurio123/docker-demo/issues"
   },
-  "homepage": "https://github.com/mercurio123/docker-demo#readme"
+  "homepage": "https://github.com/mercurio123/docker-demo#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
+  }
 }
