--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -7,7 +7,7 @@ node {
 	}
 	stage('test'){
 		nodejs(nodeJSInstallationName: 'nodejs'){
-			sh 'npm install --only=dev'
+			sh 'npm install --save-dev --only=dev'
 			sh 'npm test'
 		}
 	}
