--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -11,4 +11,9 @@ node {
 			sh 'npm test'
 		}
 	}
+	stage('docker build/push'){
+	    docker.withRegistry('https://index.docker.io/v1/', 'dockerhub'){
+	        def app = docker.build("rimgar/docker-nodejs-demo:${commit_id}", '.').push()
+	    }
+	}
 }
